--- a/API/package.json
+++ b/API/package.json
@@ -4,27 +4,24 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "start": "node app.js",
     "dev": "nodemon app.js",
     "lint": "eslint ."
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "transform": {}
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "axios": "^1.8.4",
-    "back-end": "file:",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-rate-limit": "^8.2.1",
     "firebase": "^11.5.0",
+    "helmet": "^8.1.0",
+    "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.1",
@@ -33,15 +30,12 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
-    "winston": "^3.15.0"
+    "winston": "^3.19.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
-    "chai": "^5.1.1",
     "eslint": "^9.11.1",
     "eslint-plugin-import": "^2.31.0",
-    "globals": "^15.9.0",
-    "jest": "^29.7.0",
-    "supertest": "^7.1.1"
+    "globals": "^15.9.0"
   }
 }
