--- a/Web-App/.env.example
+++ b/Web-App/.env.example
@@ -9,7 +9,7 @@
 # --------------------------------------------
 # Backend API Base URL
 # Development: http://localhost:3000/api/v1
-# Production: https://api.your-domain.com/api/v1
+# Production: http://92.112.180.180:3000/api/v1
 VITE_API_BASE_URL=http://localhost:3000/api/v1
 
 # --------------------------------------------
