Login and Sign up Improved.

--- a/API/package.json
+++ b/API/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "seed": "node src/seed/seedData.js"
   },
   "author": "",
   "license": "ISC",
