--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -3,7 +3,7 @@ name: Backend CI Pipeline
 on:
   workflow_dispatch:
   push:
-    branches: ['main']
+    branches: ['production']
 
 jobs:
   build:
