--- a/API/.dockerignore
+++ b/API/.dockerignore
@@ -1,26 +1,64 @@
-# Ignore node modules and logs
+# ===================================
+# Docker Ignore File
+# ===================================
+
+# Dependencies
 node_modules
-npm-debug.log
-yarn-debug.log
-yarn-error.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Ignore test files
+# Test files and coverage
 test
+__tests__
+*.test.js
 coverage
+.nyc_output
 
-# Ignore local environment files
+# Environment files
 .env
-.env.local
+.env.*
+!.env.example
+
+# Operating system files
 .DS_Store
+Thumbs.db
 
-# Ignore Git and Docker files
+# Version control
 .git
-.dockerignore
 .gitignore
+.gitattributes
 
-# Ignore build artifacts
+# Docker files
+Dockerfile
+.dockerignore
+docker-compose*.yml
+
+# IDE and editor files
+.vscode
+.idea
+*.swp
+*.swo
+*~
+
+# Build artifacts
 dist
 build
+*.log
 
-#logs
+# Logs
 logs
+*.log
+npm-debug.log*
+
+# Documentation
+*.md
+!README.md
+
+# CI/CD
+.github
+.gitlab-ci.yml
+.travis.yml
+
+# Migrations (optional - include if needed)
+# migrations
