--- a/API/package.json
+++ b/API/package.json
@@ -1,13 +1,21 @@
 {
   "name": "back-end",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "lint": "eslint .",
-    "seed": "node src/seed/seedData.js"
+    "seed": "node src/seed/seedData.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:watch": "npm test -- --watch",
+    "test:coverage": "npm test -- --coverage",
+    "test:ci": "npm test -- --ci --coverage --maxWorkers=2",
+    "migrate:up": "migrate-mongo up",
+    "migrate:down": "migrate-mongo down",
+    "migrate:status": "migrate-mongo status",
+    "migrate:create": "migrate-mongo create"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +24,7 @@
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
@@ -34,9 +43,15 @@
     "winston": "^3.19.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
     "@eslint/js": "^9.11.1",
     "eslint": "^9.11.1",
     "eslint-plugin-import": "^2.31.0",
-    "globals": "^15.9.0"
+    "globals": "^15.9.0",
+    "jest": "^30.2.0",
+    "migrate-mongo": "^14.0.7",
+    "mongodb-memory-server": "^11.0.0",
+    "supertest": "^7.1.4"
   }
 }
