--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -2,12 +2,12 @@ name: API CI/CD
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, production ]
     paths:
       - 'API/**'
       - '.github/workflows/api-ci.yml'
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main, production ]
     paths:
       - 'API/**'
 
